# poc_ocr

./: LICENSE  README.md  hello.py  pyproject.toml  requirements.txt
.cursor/rules/: python-code-quality.mdc
data/: README.md
memory_bank/: activeContext.md  architecture_design.md  phase2_plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  task3_plan.md  task3_status.md  tasks.md  techContext.md
scripts/: README.md  download_synthtext.py
src/ocr_poc/: __init__.py
src/ocr_poc/config/: settings.py
src/ocr_poc/data/: dataset.py  dataset_research.py  dataset_utils.py  download_datasets.py
src/ocr_poc/data/download_scripts/: __init__.py  download_hiertext.py  download_synthtext.py
src/ocr_poc/engine/: base.py
src/ocr_poc/evaluation/: metrics.py  visualizer.py
src/ocr_poc/utils/: logging.py
tests/: test_dataset.py  test_dataset_utils.py
